--- a/Crammer/Crammer.csproj
+++ b/Crammer/Crammer.csproj
@@ -50,15 +50,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmChoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmChoice.Designer.cs">
+      <DependentUpon>frmChoice.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="IDictItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestResult.cs" />
+    <Compile Include="Translates.cs" />
     <Compile Include="WordItem.cs" />
+    <Compile Include="Translate.cs" />
+    <EmbeddedResource Include="frmChoice.resx">
+      <DependentUpon>frmChoice.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
