--- a/Crammer/Crammer.csproj
+++ b/Crammer/Crammer.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dict.cs" />
     <Compile Include="frmChoice.cs">
       <SubType>Form</SubType>
     </Compile>
