--- a/Crammer/Crammer.csproj
+++ b/Crammer/Crammer.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Dict.cs" />
     <Compile Include="frmChoice.cs">
       <SubType>Form</SubType>
